downgrade-JDK-added-constants